<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="description"
        android:title="This is a demo"
        android:summary="When adding a monitring device, a setup wizerd will be used in real life."
        />
    <CheckBoxPreference
        android:key="@string/str_btn_glucose"
        android:title="@string/str_btn_glucose"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:key="@string/str_btn_oxygen"
        android:title="@string/str_btn_oxygen"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:key="@string/str_btn_bloodpressure"
        android:title="@string/str_btn_bloodpressure"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:key="@string/str_btn_breath_rate"
        android:title="@string/str_btn_breath_rate"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:key="@string/str_btn_heartrate"
        android:title="@string/str_btn_heartrate"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:key="@string/str_btn_sleep"
        android:title="@string/str_btn_sleep"
        android:defaultValue="false"/>


</PreferenceScreen>
