
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />

</PreferenceScreen>

<!--<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">-->

    <!--&lt;!&ndash; These settings headers are only used on tablets. &ndash;&gt;-->

    <!--<header-->
        <!--android:fragment="com.software.team5.health_application.SettingsActivity$GeneralPreferenceFragment"-->
        <!--android:icon="@drawable/ic_info_black_24dp"-->
        <!--android:title="@string/pref_header_general" />-->

    <!--<header-->
        <!--android:fragment="com.software.team5.health_application.SettingsActivity$NotificationPreferenceFragment"-->
        <!--android:icon="@drawable/ic_notifications_black_24dp"-->
        <!--android:title="@string/pref_header_notifications" />-->

    <!--<header-->
        <!--android:fragment="com.software.team5.health_application.SettingsActivity$DataSyncPreferenceFragment"-->
        <!--android:icon="@drawable/ic_sync_black_24dp"-->
        <!--android:title="@string/pref_header_data_sync" />-->

<!--</preference-headers>-->
