<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_main"
    tools:context=".MainActivity"
    android:contextClickable="false">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_heart_rate"
        android:layout_marginTop="58dp"
        android:src="@mipmap/ic_heart_rate"
        android:layout_marginStart="67dp"
        android:contentDescription="@string/str_btn_heartrate"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_blood_pressure"
        android:src="@mipmap/ic_blood_pressure"
        android:layout_marginStart="44dp"
        android:contentDescription="@string/str_btn_bloodpressure"
        android:layout_above="@+id/text_heart_rate"
        android:layout_toEndOf="@+id/text_heart_rate"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_glucose"
        android:src="@mipmap/ic_blood_glucose"
        android:contentDescription="@string/str_btn_glucose"
        android:layout_below="@+id/btn_breath_rate"
        android:layout_alignStart="@+id/btn_breath_rate"
        android:layout_marginTop="53dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_oxygen"
        android:src="@mipmap/ic_blood_oxygen"
        android:contentDescription="@string/str_btn_oxygen"
        android:layout_alignTop="@+id/btn_glucose"
        android:layout_alignStart="@+id/btn_blood_pressure" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/str_btn_heartrate"
        android:id="@+id/text_heart_rate"
        android:layout_below="@+id/btn_heart_rate"
        android:layout_alignStart="@+id/btn_heart_rate" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_breath_rate"
        android:src="@mipmap/ic_breath_rate"
        android:contentDescription="@string/str_btn_breath_rate"
        android:layout_alignTop="@+id/btn_sleep"
        android:layout_alignStart="@+id/text_heart_rate" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sleep"
        android:src="@mipmap/ic_sleep"
        android:contentDescription="@string/str_btn_sleep"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/text_heart_rate"
        android:layout_alignStart="@+id/btn_oxygen" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/str_btn_bloodpressure"
        android:id="@+id/textView2"
        android:layout_alignWithParentIfMissing="true"
        android:layout_above="@+id/btn_sleep"
        android:layout_alignStart="@+id/btn_blood_pressure"
        android:layout_marginStart="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/str_btn_breath_rate"
        android:id="@+id/text_breathrate"
        android:layout_below="@+id/btn_breath_rate"
        android:layout_toStartOf="@+id/btn_blood_pressure" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/str_btn_sleep"
        android:id="@+id/textView3"
        android:layout_below="@+id/btn_sleep"
        android:layout_alignEnd="@+id/btn_sleep"
        android:layout_marginEnd="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/str_btn_glucose"
        android:id="@+id/text_blood_glucose"
        android:layout_marginEnd="33dp"
        android:layout_below="@+id/btn_glucose"
        android:layout_toStartOf="@+id/btn_oxygen" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/str_btn_oxygen"
        android:id="@+id/textView4"
        android:layout_marginStart="27dp"
        android:layout_alignTop="@+id/text_blood_glucose"
        android:layout_toEndOf="@+id/text_heart_rate" />

</RelativeLayout>
